avniproject/avni-security#78 - separated targets for API based postman request testing to separate makefile. JsonEncoder to encode JSON payload value fields. property for feature flag.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -54,6 +54,7 @@ avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:21600}
 avni.blacklisted.urls-file=${AVNI_BLACKLISTED_URLS_FILE:}
 avni.csrf.enabled=${AVNI_CSRF_ENABLED:true}
 avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
+avni.web.payload.encoding=${AVNI_WEB_PAYLOAD_ENCODING:false}
 
 # Cognito
 cognito.clientid=${OPENCHS_CLIENT_ID:dummy}
