--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -102,6 +102,8 @@ avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
 avni.blacklisted.urls-file=
 avni.csrf.enabled=${AVNI_CSRF_ENABLED:false}
 avni.web.validHosts=${AVNI_WEB_VALIDHOSTS:}
+# to ensure integration tests work with encoding
+avni.web.payload.encoding=true
 avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:false}
 csp.enabled=${OPENCHS_CSP_ENABLED:false}
 csp.allowed.hosts=dummy
