avniproject/avni-webapp#1140 | Added Rest point to get external reporting system

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -146,3 +146,11 @@ avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:true}
 avni.exception.in.response=${AVNI_SEND_EXCEPTION_IN_RESPONSE:true}
 
 logging.level.org.hibernate.SQL=OFF
+
+#reporting
+avni.reportingSystems[0].name=Metabase Reports
+avni.reportingSystems[0].url=https://reporting.avniproject.org
+avni.reportingSystems[1].name=Jasper Reports
+avni.reportingSystems[1].url=https://reporting-jasper.avniproject.org/jasperserver/login.html
+avni.reportingSystems[2].name=Superset Reports
+avni.reportingSystems[2].url=https://reporting-superset.avniproject.org/login/
