avniproject/avni-webapp#1140 | Added removed value report values and set via environment variable

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -148,9 +148,4 @@ avni.exception.in.response=${AVNI_SEND_EXCEPTION_IN_RESPONSE:true}
 logging.level.org.hibernate.SQL=OFF
 
 #reporting
-avni.reportingSystems[0].name=Metabase Reports
-avni.reportingSystems[0].url=https://reporting.avniproject.org
-avni.reportingSystems[1].name=Jasper Reports
-avni.reportingSystems[1].url=https://reporting-jasper.avniproject.org/jasperserver/login.html
-avni.reportingSystems[2].name=Superset Reports
-avni.reportingSystems[2].url=https://reporting-superset.avniproject.org/login/
+avni.reportingSystems=${OPENCHS_REPORT_SYSTEMS:null}
