avniproject/avni-webapp#1140 | set response entity and removed avni reporting properties

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -148,9 +148,9 @@ avni.exception.in.response=${AVNI_SEND_EXCEPTION_IN_RESPONSE:true}
 logging.level.org.hibernate.SQL=OFF
 
 #reporting
-avni.reportingSystems[0].name=${AVNI_REPORTING_SYSTEM_0_NAME:Avni Metabase Reports}
-avni.reportingSystems[0].url=${AVNI_REPORTING_SYSTEM_0_URL:https://reporting.avniproject.org}
-avni.reportingSystems[1].name=${AVNI_REPORTING_SYSTEM_1_NAME:Avni Jasper Reports}
-avni.reportingSystems[1].url=${AVNI_REPORTING_SYSTEM_1_URL:https://reporting-jasper.avniproject.org/jasperserver/login.html}
-avni.reportingSystems[2].name=${AVNI_REPORTING_SYSTEM_2_NAME:Avni Superset Reports}
-avni.reportingSystems[2].url=${AVNI_REPORTING_SYSTEM_2_URL:https://reporting-superset.avniproject.org/login/}
+avni.reportingSystems[0].name=${AVNI_REPORTING_SYSTEM_0_NAME:}
+avni.reportingSystems[0].url=${AVNI_REPORTING_SYSTEM_0_URL:}
+avni.reportingSystems[1].name=${AVNI_REPORTING_SYSTEM_1_NAME:}
+avni.reportingSystems[1].url=${AVNI_REPORTING_SYSTEM_1_URL:}
+avni.reportingSystems[2].name=${AVNI_REPORTING_SYSTEM_2_NAME:}
+avni.reportingSystems[2].url=${AVNI_REPORTING_SYSTEM_2_URL:}
