#702 - log whenever items are getting added to the cache. log time taken by search.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -31,9 +31,6 @@ spring.jpa.properties.jadira.usertype.javaZone=jvm
 spring.jpa.properties.jadira.usertype.autoRegisterUserTypes=true
 spring.jpa.properties.hibernate.dialect=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
 spring.jpa.properties.hibernate.ejb.interceptor=org.avni.server.framework.hibernate.UpdateOrganisationHibernateInterceptor
-spring.jpa.properties.hibernate.cache.use_second_level_cache=true
-spring.jpa.properties.hibernate.cache.use_query_cache=true
-spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 spring.jpa.database-platform=org.avni.server.framework.postgres.CHSPostgreSQL94Dialect
 spring.jpa.hibernate.use-new-id-generator-mappings=true
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
@@ -41,6 +38,11 @@ avni.custom.query.timeout=${AVNI_CUSTOM_QUERY_TIMEOUT:3}
 avni.custom.query.max.rows=${AVNI_CUSTOM_QUERY_MAX_ROWS:2000}
 avni.longitudinal.export.v2.limit=${AVNI_LONGITUDINAL_EXPORT_V2_LIMIT:10000}
 avni.legacy.longitudinal.export.limit=${AVNI_LEGACY_LONGITUDINAL_EXPORT_LIMIT:10000}
+
+# Second level and Query cache. Also check ehcache.xml file.
+spring.jpa.properties.hibernate.cache.use_second_level_cache=true
+spring.jpa.properties.hibernate.cache.use_query_cache=true
+spring.jpa.properties.hibernate.cache.region.factory_class=org.hibernate.cache.ehcache.EhCacheRegionFactory
 
 # Hibernate Search
 spring.jpa.properties.hibernate.search.default.directory_provider=local-heap
