--- a/avni-server-api/src/main/resources/api/external-api.yaml
+++ b/avni-server-api/src/main/resources/api/external-api.yaml
@@ -1093,6 +1093,88 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/inline_response_200_4'
+  /api/locations:
+    get:
+      tags:
+        - Location
+      summary: Get paged list of locations
+      description: |
+        By passing in the appropriate options, you can get the locations in set of pages.
+      parameters:
+        - name: lastModifiedDateTime
+          in: query
+          description: "date-time in ISO datetime format. All the locations which have been updated since this time will be returned. The value should be specified in the following format - yyyy-MM-dd'T'HH:mm:ss.SSSZ, e.g. \"2000-10-31T01:30:00.000Z\"."
+          required: false
+          style: form
+          explode: true
+          schema:
+            type: string
+        - name: auth-token
+          in: header
+          required: false
+          style: simple
+          explode: false
+          schema:
+            type: string
+            description: token provided by cognito/keycloak
+        - name: version
+          in: query
+          description: "Version of the API to be called"
+          required: false
+          explode: false
+          schema:
+            type: string
+            default: 1
+      responses:
+        "200":
+          description: "successful, a page of locations"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/inline_response_200_locations'
+        "400":
+          description: bad input parameter
+  /api/location/{ID}:
+    get:
+      tags:
+        - Location
+      summary: Get a specific location by ID
+      description: |
+        Provide the ID of the location. The ID is in UUID format.
+      parameters:
+        - name: ID
+          in: path
+          required: true
+          style: simple
+          explode: false
+          schema:
+            type: string
+            format: uuid
+        - name: auth-token
+          in: header
+          required: false
+          style: simple
+          explode: false
+          schema:
+            type: string
+            description: token provided by cognito/keycloak
+        - name: version
+          in: query
+          description: "Version of the API to be called"
+          required: false
+          explode: false
+          schema:
+            type: string
+            default: 1
+      responses:
+        "200":
+          description: successful
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Location'
+        "400":
+          description: bad input parameter
   /api/subjectMigration/bulk:
     post:
       tags:
@@ -1181,7 +1263,7 @@ components:
           format: uuid
         External ID:
           type: string
-          description: "Legacy ID set by the external integrating system, this field is optional."
+          description: "External ID, present when subject is created by an external integrating system. This field is optional."
         Voided:
           type: boolean
         Subject type:
@@ -1229,7 +1311,7 @@ components:
       properties:
         External ID:
           type: string
-          description: "Legacy ID set by the external integrating system, this field is optional."
+          description: "External ID, present when subject is created by an external integrating system. This field is optional."
         Subject type:
           type: string
           example: Individual
@@ -1296,7 +1378,7 @@ components:
           format: uuid
         External ID:
           type: string
-          description: "Legacy ID set by the external integrating system, this field is optional."
+          description: "External ID, present when enrolment is created by an external integrating system. This field is optional."
         Voided:
           type: boolean
         Subject ID:
@@ -1304,7 +1386,7 @@ components:
           format: uuid
         Subject external ID:
           type: string
-          description: "Subject's Legacy ID set by the external integrating system, this field is optional."
+          description: "Subject's external ID, present when its subject is created by an external integrating system. This field is optional."
         Subject type:
           type: string
         Program:
@@ -1341,7 +1423,7 @@ components:
           format: uuid
         External ID:
           type: string
-          description: "Legacy ID set by the external integrating system, this field is optional."
+          description: "External ID, present when program encounter is created by an external integrating system. This field is optional."
         Voided:
           type: boolean
         Subject ID:
@@ -1350,7 +1432,7 @@ components:
           format: uuid
         Subject external ID:
           type: string
-          description: "Subject's Legacy ID set by the external integrating system, this field is optional."
+          description: "Subject's external ID, present when subject is created by an external integrating system. This field is optional."
         Subject type:
           type: string
           description: "name of the subject type to which this encounter belongs, same as subject type in the subject resource"
@@ -1360,7 +1442,7 @@ components:
           format: uuid
         Enrolment external ID:
           type: string
-          description: "Enrolment's Legacy ID set by the external integrating system, this field is optional."
+          description: "Enrolment's external ID, present when enrolment is created by an external integrating system. This field is optional."
         Program:
           type: string
           description: "name of the program of the enrolment to which this encounter belongs, same as program in the program enrolment resource"
@@ -1399,14 +1481,14 @@ components:
       properties:
         External ID:
           type: string
-          description: "Legacy ID set by the external integrating system, this field is optional."
+          description: "External ID, present when program encounter is created by an external integrating system. This field is optional."
         Enrolment ID:
           type: string
           description: id of the program enrolment
           format: uuid
         Enrolment external ID:
           type: string
-          description: "Enrolment's Legacy ID set by the external integrating system, this field is optional."
+          description: "Enrolment's external ID, present when enrolment is created by an external integrating system. This field is optional."
         Program:
           type: string
           description: "name of the program of the enrolment to which this encounter belongs, same as program in the program enrolment resource"
@@ -1448,7 +1530,7 @@ components:
           format: uuid
         External ID:
           type: string
-          description: "Legacy ID set by the external integrating system, this field is optional."
+          description: "External ID, present when encounter is created by an external integrating system. This field is optional."
         Voided:
           type: boolean
         Encounter type:
@@ -1460,7 +1542,7 @@ components:
           format: uuid
         Subject external ID:
           type: string
-          description: "Subject's Legacy ID set by the external integrating system, this field is optional."
+          description: "Subject's external ID, present when subject is created by an external integrating system. This field is optional."
         Subject type:
           type: string
           description: "name of the subject type to which this encounter belongs, same as subject type in the subject resource"
@@ -1496,7 +1578,7 @@ components:
       properties:
         External ID:
           type: string
-          description: "Legacy ID set by the external integrating system, this field is optional."
+          description: "External ID, present when enrolment is created by an external integrating system. This field is optional."
         Program:
           type: string
           example: ANC program
@@ -1506,7 +1588,7 @@ components:
           format: uuid
         Subject external ID:
           type: string
-          description: "Subject's Legacy ID set by the external integrating system, this field is optional."
+          description: "Subject's external ID, present when enrolment is created by an external integrating system. This field is optional."
         Enrolment location:
           $ref: '#/components/schemas/GeoLocation'
         Exit location:
@@ -1530,7 +1612,7 @@ components:
       properties:
         External ID:
           type: string
-          description: Legacy ID set by the external integrating system
+          description: "External ID, present when encounter is created by an external integrating system. This field is optional."
         Encounter type:
           type: string
           example: Monthly Visit
@@ -1540,7 +1622,7 @@ components:
           format: uuid
         Subject external ID:
           type: string
-          description: Subject's Legacy ID set by the external integrating system
+          description: "Subject's external ID, present when subject is created by an external integrating system. This field is optional."
         Encounter location:
           $ref: '#/components/schemas/GeoLocation'
         Encounter date time:
@@ -1568,6 +1650,30 @@ components:
           description: "as key value pairs. key is string and value of type (date, string, number or array of string of name of concepts)"
         Voided:
           type: boolean
+    Location:
+      type: object
+      properties:
+        ID:
+          type: string
+          format: uuid
+        External ID:
+          type: string
+          description: "External ID, present when location is created by an external integrating system. This field is optional."
+        Title:
+          type: string
+        Type:
+          type: string
+        Level:
+          type: number
+          description: "Level of the location in the hierarchy"
+        GPS Coordinates:
+          $ref: '#/components/schemas/GeoLocation'
+        Parent:
+          $ref: '#/components/schemas/Location'
+        Voided:
+          type: boolean
+        audit:
+          $ref: '#/components/schemas/Audit'
     GeoLocation:
       type: object
       properties:
@@ -1577,7 +1683,7 @@ components:
         "Y":
           type: number
           example: 74.7364501
-      description: Available if the location is enabled by the user
+      description: Available if the location is enabled by the user for transactional data
     Audit:
       type: object
       properties:
@@ -1718,3 +1824,11 @@ components:
       allOf:
         - $ref: '#/components/schemas/Task'
         - $ref: '#/components/schemas/TaskBody'
+    inline_response_200_locations:
+        properties:
+          content:
+            type: array
+            items:
+                $ref: '#/components/schemas/Location'
+        allOf:
+            - $ref: '#/components/schemas/ResponsePage'
