--- a/avni-server-api/src/main/resources/api/external-api.yaml
+++ b/avni-server-api/src/main/resources/api/external-api.yaml
@@ -42,6 +42,14 @@ paths:
           explode: true
           schema:
             type: string
+        - name: includeCatchments
+          in: query
+          required: false
+          style: form
+          explode: true
+          description: "Iff true, the catchment details of the subject will be included in the response."
+          schema:
+            type: boolean
         - name: concepts
           in: query
           description: "Allows to search by concepts. Remember that '{' and '}' are not valid in a url, and need to be escaped with %7B and %7D respectively."
@@ -102,6 +110,14 @@ paths:
           schema:
             type: string
             format: uuid
+        - name: includeCatchments
+          in: query
+          required: false
+          style: form
+          explode: true
+          description: "Iff true, the catchment details of the subject will be included in the response."
+          schema:
+            type: boolean
         - name: auth-token
           in: header
           required: false
@@ -1033,6 +1049,14 @@ paths:
           schema:
             type: string
             format: uuid
+        - name: includeCatchments
+          in: query
+          required: false
+          style: form
+          explode: true
+          description: "Iff true, the catchment details of the subject will be included in the response."
+          schema:
+            type: boolean
         - name: auth-token
           in: header
           required: false
